[gd_scene load_steps=24 format=3 uid="uid://daqevwntvcp3o"]

[ext_resource type="Script" path="res://ui_scenes/playerHUD/banner/hotbar_banner.gd" id="1_iyyfi"]
[ext_resource type="PackedScene" uid="uid://cr7y1t1hoywt1" path="res://ui_scenes/playerHUD/inventory/inventory_slot.tscn" id="2_il2kt"]
[ext_resource type="Texture2D" uid="uid://bw4fq64a1ehwa" path="res://ui_scenes/playerHUD/armor/armoricons.png" id="3_8kb7t"]
[ext_resource type="Script" path="res://ui_scenes/playerHUD/banner/Crafting.gd" id="3_i82mf"]
[ext_resource type="Texture2D" uid="uid://dx82ru7gr64h2" path="res://ui_scenes/playerHUD/inventory/nineRect.png" id="3_k7pwo"]
[ext_resource type="Texture2D" uid="uid://bdqiwxyn3wg0y" path="res://ui_scenes/playerHUD/armor/vanityicons.png" id="4_50oir"]
[ext_resource type="FontFile" uid="uid://n3r2v6m6uh2n" path="res://zeeg/font/GrapeSoda.ttf" id="5_3w5al"]
[ext_resource type="Texture2D" uid="uid://i6l5rsnepvoc" path="res://ui_scenes/playerHUD/healthBar/white.png" id="5_ryv7v"]
[ext_resource type="FontFile" uid="uid://c3vw44vws5n61" path="res://zeeg/font/I-pixel-u.ttf" id="6_bqidn"]
[ext_resource type="FontFile" uid="uid://bn0yrqolh4ms8" path="res://zeeg/font/Arcadepix Plus.ttf" id="7_tlsqg"]
[ext_resource type="Texture2D" uid="uid://b0ux0djrrr28d" path="res://ui_scenes/playerHUD/defense/coolShield.png" id="8_5tjvp"]
[ext_resource type="Texture2D" uid="uid://q1g4ghc2dp45" path="res://ui_scenes/playerHUD/crafting/visibleEyes.png" id="9_8uxfg"]

[sub_resource type="LabelSettings" id="LabelSettings_0g03e"]
resource_local_to_scene = true
font = ExtResource("6_bqidn")
font_size = 8
font_color = Color(0.854902, 0.878431, 0.901961, 1)
outline_size = 5
outline_color = Color(0.0823529, 0.113725, 0.156863, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bk67w"]
font = ExtResource("5_3w5al")
font_color = Color(0.988235, 0.988235, 0.988235, 1)
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6riis"]
bg_color = Color(0.709804, 0.709804, 0.709804, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cm1y8"]
bg_color = Color(0.658824, 0.658824, 0.658824, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_omsf4"]
bg_color = Color(0.509804, 0.509804, 0.509804, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sesr6"]
content_margin_left = 1.0
content_margin_top = 0.0
content_margin_right = 4.0
content_margin_bottom = 0.0
bg_color = Color(1, 1, 1, 0.176471)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 2
anti_aliasing = false

[sub_resource type="Theme" id="Theme_yy38c"]
VScrollBar/styles/grabber = SubResource("StyleBoxFlat_6riis")
VScrollBar/styles/grabber_highlight = SubResource("StyleBoxFlat_cm1y8")
VScrollBar/styles/grabber_pressed = SubResource("StyleBoxFlat_omsf4")
VScrollBar/styles/scroll = SubResource("StyleBoxFlat_sesr6")
VScrollBar/styles/scroll_focus = null
VSlider/constants/center_grabber = 0

[sub_resource type="LabelSettings" id="LabelSettings_utrlr"]
font = ExtResource("6_bqidn")
font_size = 8
outline_size = 3
outline_color = Color(0.0352941, 0.0352941, 0.0352941, 1)
shadow_size = 5
shadow_color = Color(0.0352941, 0.0352941, 0.0352941, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8lb1b"]
resource_local_to_scene = true
line_spacing = 0.0
font = ExtResource("6_bqidn")
font_size = 8
font_color = Color(0.501961, 0.501961, 0.501961, 1)
outline_size = 5
outline_color = Color(0, 0, 0, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_wiqs2"]
resource_local_to_scene = true
line_spacing = 2.0
font = ExtResource("5_3w5al")
outline_size = 5
outline_color = Color(0, 0, 0, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ta8xq"]
font = ExtResource("5_3w5al")
font_size = 32
font_color = Color(1, 0.784314, 0.333333, 1)
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 1)

[node name="HotbarBanner" type="Node2D"]
z_index = 170
script = ExtResource("1_iyyfi")

[node name="NinePatchRect2" type="NinePatchRect" parent="."]
offset_left = 2.0
offset_top = 2.0
offset_right = 400.0
offset_bottom = 41.0
texture = ExtResource("3_k7pwo")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="Hotbar" type="Node2D" parent="."]
position = Vector2(7, 6)

[node name="slot0" parent="Hotbar" instance=ExtResource("2_il2kt")]

[node name="slot1" parent="Hotbar" instance=ExtResource("2_il2kt")]
position = Vector2(18, 0)
slotToDisplay = 1

[node name="slot2" parent="Hotbar" instance=ExtResource("2_il2kt")]
position = Vector2(36, 0)
slotToDisplay = 2

[node name="slot3" parent="Hotbar" instance=ExtResource("2_il2kt")]
position = Vector2(54, 0)
slotToDisplay = 3

[node name="slot4" parent="Hotbar" instance=ExtResource("2_il2kt")]
position = Vector2(72, 0)
slotToDisplay = 4

[node name="slot5" parent="Hotbar" instance=ExtResource("2_il2kt")]
position = Vector2(0, 17)
slotToDisplay = 5

[node name="slot6" parent="Hotbar" instance=ExtResource("2_il2kt")]
position = Vector2(18, 17)
slotToDisplay = 6

[node name="slot7" parent="Hotbar" instance=ExtResource("2_il2kt")]
position = Vector2(36, 17)
slotToDisplay = 7

[node name="slot8" parent="Hotbar" instance=ExtResource("2_il2kt")]
position = Vector2(54, 17)
slotToDisplay = 8

[node name="slot9" parent="Hotbar" instance=ExtResource("2_il2kt")]
position = Vector2(72, 17)
slotToDisplay = 9

[node name="holdingSlot" parent="." instance=ExtResource("2_il2kt")]
z_index = 3
position = Vector2(-24, 195)
slotToDisplay = 49
showOutline = false
isHoldSlot = true

[node name="Menu" type="Node2D" parent="."]
position = Vector2(-1, -1)

[node name="NinePatchRect" type="NinePatchRect" parent="Menu"]
offset_left = 3.0
offset_top = 43.0
offset_right = 190.0
offset_bottom = 154.0
texture = ExtResource("3_k7pwo")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="Armoricons" type="Sprite2D" parent="Menu"]
position = Vector2(111, 75)
texture = ExtResource("3_8kb7t")

[node name="Vanityicons" type="Sprite2D" parent="Menu"]
position = Vector2(130, 75)
texture = ExtResource("4_50oir")

[node name="InventoryBody" type="Node2D" parent="Menu"]
position = Vector2(8, 49)

[node name="slot10" parent="Menu/InventoryBody" instance=ExtResource("2_il2kt")]
slotToDisplay = 10

[node name="slot11" parent="Menu/InventoryBody" instance=ExtResource("2_il2kt")]
position = Vector2(18, 0)
slotToDisplay = 11

[node name="slot12" parent="Menu/InventoryBody" instance=ExtResource("2_il2kt")]
position = Vector2(36, 0)
slotToDisplay = 12

[node name="slot13" parent="Menu/InventoryBody" instance=ExtResource("2_il2kt")]
position = Vector2(54, 0)
slotToDisplay = 13

[node name="slot14" parent="Menu/InventoryBody" instance=ExtResource("2_il2kt")]
position = Vector2(72, 0)
slotToDisplay = 14

[node name="slot15" parent="Menu/InventoryBody" instance=ExtResource("2_il2kt")]
position = Vector2(0, 17)
slotToDisplay = 15

[node name="slot16" parent="Menu/InventoryBody" instance=ExtResource("2_il2kt")]
position = Vector2(18, 17)
slotToDisplay = 16

[node name="slot17" parent="Menu/InventoryBody" instance=ExtResource("2_il2kt")]
position = Vector2(36, 17)
slotToDisplay = 17

[node name="slot18" parent="Menu/InventoryBody" instance=ExtResource("2_il2kt")]
position = Vector2(54, 17)
slotToDisplay = 18

[node name="slot19" parent="Menu/InventoryBody" instance=ExtResource("2_il2kt")]
position = Vector2(72, 17)
slotToDisplay = 19

[node name="slot20" parent="Menu/InventoryBody" instance=ExtResource("2_il2kt")]
position = Vector2(0, 34)
slotToDisplay = 20

[node name="slot21" parent="Menu/InventoryBody" instance=ExtResource("2_il2kt")]
position = Vector2(18, 34)
slotToDisplay = 21

[node name="slot22" parent="Menu/InventoryBody" instance=ExtResource("2_il2kt")]
position = Vector2(36, 34)
slotToDisplay = 22

[node name="slot23" parent="Menu/InventoryBody" instance=ExtResource("2_il2kt")]
position = Vector2(54, 34)
slotToDisplay = 23

[node name="slot24" parent="Menu/InventoryBody" instance=ExtResource("2_il2kt")]
position = Vector2(72, 34)
slotToDisplay = 24

[node name="slot25" parent="Menu/InventoryBody" instance=ExtResource("2_il2kt")]
position = Vector2(0, 51)
slotToDisplay = 25

[node name="slot26" parent="Menu/InventoryBody" instance=ExtResource("2_il2kt")]
position = Vector2(18, 51)
slotToDisplay = 26

[node name="slot27" parent="Menu/InventoryBody" instance=ExtResource("2_il2kt")]
position = Vector2(36, 51)
slotToDisplay = 27

[node name="slot28" parent="Menu/InventoryBody" instance=ExtResource("2_il2kt")]
position = Vector2(54, 51)
slotToDisplay = 28

[node name="slot29" parent="Menu/InventoryBody" instance=ExtResource("2_il2kt")]
position = Vector2(72, 51)
slotToDisplay = 29

[node name="slot30" parent="Menu/InventoryBody" instance=ExtResource("2_il2kt")]
position = Vector2(0, 68)
slotToDisplay = 30

[node name="slot31" parent="Menu/InventoryBody" instance=ExtResource("2_il2kt")]
position = Vector2(18, 68)
slotToDisplay = 31

[node name="slot32" parent="Menu/InventoryBody" instance=ExtResource("2_il2kt")]
position = Vector2(36, 68)
slotToDisplay = 32

[node name="slot33" parent="Menu/InventoryBody" instance=ExtResource("2_il2kt")]
position = Vector2(54, 68)
slotToDisplay = 33

[node name="slot34" parent="Menu/InventoryBody" instance=ExtResource("2_il2kt")]
position = Vector2(72, 68)
slotToDisplay = 34

[node name="slot35" parent="Menu/InventoryBody" instance=ExtResource("2_il2kt")]
position = Vector2(0, 85)
slotToDisplay = 35

[node name="slot36" parent="Menu/InventoryBody" instance=ExtResource("2_il2kt")]
position = Vector2(18, 85)
slotToDisplay = 36

[node name="slot37" parent="Menu/InventoryBody" instance=ExtResource("2_il2kt")]
position = Vector2(36, 85)
slotToDisplay = 37

[node name="slot38" parent="Menu/InventoryBody" instance=ExtResource("2_il2kt")]
position = Vector2(54, 85)
slotToDisplay = 38

[node name="slot39" parent="Menu/InventoryBody" instance=ExtResource("2_il2kt")]
position = Vector2(72, 85)
slotToDisplay = 39

[node name="defense" type="Sprite2D" parent="Menu"]
position = Vector2(114, 105)
texture = ExtResource("8_5tjvp")
centered = false

[node name="defenseAmount" type="Label" parent="Menu/defense"]
offset_left = -7.0
offset_right = 22.0
offset_bottom = 13.0
tooltip_text = "defense"
mouse_filter = 1
text = "0"
label_settings = SubResource("LabelSettings_0g03e")
horizontal_alignment = 1

[node name="ArmorSlots" type="Node2D" parent="Menu"]
position = Vector2(105, 50)

[node name="slot40" parent="Menu/ArmorSlots" instance=ExtResource("2_il2kt")]
slotToDisplay = 40
customToolTip = "helmet slot"

[node name="slot41" parent="Menu/ArmorSlots" instance=ExtResource("2_il2kt")]
position = Vector2(0, 19)
slotToDisplay = 41
customToolTip = "chestplate slot"

[node name="slot42" parent="Menu/ArmorSlots" instance=ExtResource("2_il2kt")]
position = Vector2(0, 38)
slotToDisplay = 42
customToolTip = "leggings slot"

[node name="VanitySlots" type="Node2D" parent="Menu"]
position = Vector2(124, 50)

[node name="slot50" parent="Menu/VanitySlots" instance=ExtResource("2_il2kt")]
slotToDisplay = 50
customToolTip = "vanity hat slot"

[node name="slot51" parent="Menu/VanitySlots" instance=ExtResource("2_il2kt")]
position = Vector2(0, 19)
slotToDisplay = 51
customToolTip = "vanity shirt slot"

[node name="slot52" parent="Menu/VanitySlots" instance=ExtResource("2_il2kt")]
position = Vector2(0, 38)
slotToDisplay = 52
customToolTip = "vanity pants slot"

[node name="AccessorySlots" type="Node2D" parent="Menu"]
position = Vector2(150, 50)

[node name="slot43" parent="Menu/AccessorySlots" instance=ExtResource("2_il2kt")]
slotToDisplay = 43
customToolTip = "trinket slot"

[node name="slot44" parent="Menu/AccessorySlots" instance=ExtResource("2_il2kt")]
position = Vector2(0, 19)
slotToDisplay = 44
customToolTip = "trinket slot"

[node name="slot45" parent="Menu/AccessorySlots" instance=ExtResource("2_il2kt")]
position = Vector2(0, 38)
slotToDisplay = 45
customToolTip = "trinket slot"

[node name="slot46" parent="Menu/AccessorySlots" instance=ExtResource("2_il2kt")]
position = Vector2(17, 0)
slotToDisplay = 46
customToolTip = "trinket slot"

[node name="slot47" parent="Menu/AccessorySlots" instance=ExtResource("2_il2kt")]
position = Vector2(17, 19)
slotToDisplay = 47
customToolTip = "trinket slot"

[node name="slot48" parent="Menu/AccessorySlots" instance=ExtResource("2_il2kt")]
position = Vector2(17, 38)
slotToDisplay = 48
customToolTip = "trinket slot"

[node name="Crafting" type="Node2D" parent="Menu"]
position = Vector2(6, 157)
script = ExtResource("3_i82mf")

[node name="itemInfo" type="Node2D" parent="Menu/Crafting"]
visible = false

[node name="itemName" type="Label" parent="Menu/Crafting/itemInfo"]
offset_left = 68.0
offset_top = 4.0
offset_right = 226.0
offset_bottom = 22.0
label_settings = SubResource("LabelSettings_bk67w")

[node name="ingHolder" type="Node2D" parent="Menu/Crafting/itemInfo"]
position = Vector2(76, 31)

[node name="ScrollContainer" type="ScrollContainer" parent="Menu/Crafting"]
offset_right = 63.0
offset_bottom = 141.0
theme = SubResource("Theme_yy38c")
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="Menu/Crafting/ScrollContainer"]
layout_mode = 2
columns = 2

[node name="craftingViSToggle" type="Button" parent="Menu"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 178.0
offset_top = 142.0
offset_right = 187.0
offset_bottom = 150.0
tooltip_text = "show uncraftable items"

[node name="VisibleEyes" type="Sprite2D" parent="Menu/craftingViSToggle"]
texture = ExtResource("9_8uxfg")
centered = false
hframes = 2

[node name="HealthBar" type="Node2D" parent="."]
position = Vector2(395, 7)

[node name="barShadow" type="Sprite2D" parent="HealthBar"]
modulate = Color(0.972549, 0.631373, 0.266667, 1)
position = Vector2(1, 1)
scale = Vector2(50, 6)
texture = ExtResource("5_ryv7v")
centered = false
offset = Vector2(-1, 0)

[node name="bar" type="Sprite2D" parent="HealthBar"]
modulate = Color(1, 0.784314, 0.333333, 1)
scale = Vector2(50, 6)
texture = ExtResource("5_ryv7v")
centered = false
offset = Vector2(-1, 0)

[node name="healthText" type="Label" parent="HealthBar"]
offset_left = -209.0
offset_top = 1.0
offset_right = 2.0
offset_bottom = 13.0
text = "50 / 50"
label_settings = SubResource("LabelSettings_utrlr")
horizontal_alignment = 2

[node name="Cheat" type="Node2D" parent="."]
visible = false
position = Vector2(0, 300)

[node name="TextEdit" type="TextEdit" parent="Cheat"]
offset_left = 5.0
offset_top = -29.0
offset_right = 397.0
offset_bottom = -1.0
theme_override_fonts/font = ExtResource("7_tlsqg")
theme_override_font_sizes/font_size = 16
placeholder_text = "enter command"

[node name="Chat" type="Node2D" parent="."]
position = Vector2(400, 300)

[node name="ItemPreview" type="Node2D" parent="."]
position = Vector2(3, 42)

[node name="namebox" type="ColorRect" parent="ItemPreview"]
visible = false
offset_top = 1.0
offset_right = 201.0
offset_bottom = 21.0
color = Color(0, 0, 0, 0.407843)

[node name="infoBox" type="ColorRect" parent="ItemPreview"]
visible = false
offset_top = 24.0
offset_right = 201.0
offset_bottom = 43.0
color = Color(0, 0, 0, 0.407843)

[node name="subtext" type="Label" parent="ItemPreview"]
offset_left = 5.0
offset_top = 19.0
offset_right = 199.0
offset_bottom = 34.0
label_settings = SubResource("LabelSettings_8lb1b")

[node name="itemSlotName" type="Label" parent="ItemPreview"]
offset_left = 4.0
offset_top = 2.0
offset_right = 199.0
offset_bottom = 25.0
label_settings = SubResource("LabelSettings_bk67w")

[node name="information" type="Label" parent="ItemPreview"]
offset_left = 3.0
offset_top = 24.0
offset_right = 197.0
offset_bottom = 95.0
label_settings = SubResource("LabelSettings_wiqs2")
autowrap_mode = 2

[node name="ChestInventory" type="Node2D" parent="."]
visible = false
position = Vector2(7, 159)

[node name="NinePatchRect" type="NinePatchRect" parent="ChestInventory"]
offset_left = -5.0
offset_top = -5.0
offset_right = 90.0
offset_bottom = 87.0
texture = ExtResource("3_k7pwo")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="slots" type="Node2D" parent="ChestInventory"]

[node name="slot53" parent="ChestInventory/slots" instance=ExtResource("2_il2kt")]
slotToDisplay = 53

[node name="slot54" parent="ChestInventory/slots" instance=ExtResource("2_il2kt")]
position = Vector2(18, 0)
slotToDisplay = 54

[node name="slot55" parent="ChestInventory/slots" instance=ExtResource("2_il2kt")]
position = Vector2(36, 0)
slotToDisplay = 55

[node name="slot56" parent="ChestInventory/slots" instance=ExtResource("2_il2kt")]
position = Vector2(54, 0)
slotToDisplay = 56

[node name="slot57" parent="ChestInventory/slots" instance=ExtResource("2_il2kt")]
position = Vector2(72, 0)
slotToDisplay = 57

[node name="slot58" parent="ChestInventory/slots" instance=ExtResource("2_il2kt")]
position = Vector2(0, 17)
slotToDisplay = 58

[node name="slot59" parent="ChestInventory/slots" instance=ExtResource("2_il2kt")]
position = Vector2(18, 17)
slotToDisplay = 59

[node name="slot60" parent="ChestInventory/slots" instance=ExtResource("2_il2kt")]
position = Vector2(36, 17)
slotToDisplay = 60

[node name="slot61" parent="ChestInventory/slots" instance=ExtResource("2_il2kt")]
position = Vector2(54, 17)
slotToDisplay = 61

[node name="slot62" parent="ChestInventory/slots" instance=ExtResource("2_il2kt")]
position = Vector2(72, 17)
slotToDisplay = 62

[node name="slot63" parent="ChestInventory/slots" instance=ExtResource("2_il2kt")]
position = Vector2(0, 34)
slotToDisplay = 63

[node name="slot64" parent="ChestInventory/slots" instance=ExtResource("2_il2kt")]
position = Vector2(18, 34)
slotToDisplay = 64

[node name="slot65" parent="ChestInventory/slots" instance=ExtResource("2_il2kt")]
position = Vector2(36, 34)
slotToDisplay = 65

[node name="slot66" parent="ChestInventory/slots" instance=ExtResource("2_il2kt")]
position = Vector2(54, 34)
slotToDisplay = 66

[node name="slot67" parent="ChestInventory/slots" instance=ExtResource("2_il2kt")]
position = Vector2(72, 34)
slotToDisplay = 67

[node name="slot68" parent="ChestInventory/slots" instance=ExtResource("2_il2kt")]
position = Vector2(0, 51)
slotToDisplay = 68

[node name="slot69" parent="ChestInventory/slots" instance=ExtResource("2_il2kt")]
position = Vector2(18, 51)
slotToDisplay = 69

[node name="slot70" parent="ChestInventory/slots" instance=ExtResource("2_il2kt")]
position = Vector2(36, 51)
slotToDisplay = 70

[node name="slot71" parent="ChestInventory/slots" instance=ExtResource("2_il2kt")]
position = Vector2(54, 51)
slotToDisplay = 71

[node name="slot72" parent="ChestInventory/slots" instance=ExtResource("2_il2kt")]
position = Vector2(72, 51)
slotToDisplay = 72

[node name="slot73" parent="ChestInventory/slots" instance=ExtResource("2_il2kt")]
position = Vector2(0, 68)
slotToDisplay = 73

[node name="slot74" parent="ChestInventory/slots" instance=ExtResource("2_il2kt")]
position = Vector2(18, 68)
slotToDisplay = 74

[node name="slot75" parent="ChestInventory/slots" instance=ExtResource("2_il2kt")]
position = Vector2(36, 68)
slotToDisplay = 75

[node name="slot76" parent="ChestInventory/slots" instance=ExtResource("2_il2kt")]
position = Vector2(54, 68)
slotToDisplay = 76

[node name="slot77" parent="ChestInventory/slots" instance=ExtResource("2_il2kt")]
position = Vector2(72, 68)
slotToDisplay = 77

[node name="Death Screen" type="Node2D" parent="."]
visible = false

[node name="youDied" type="Label" parent="Death Screen"]
offset_top = 118.0
offset_right = 400.0
offset_bottom = 156.0
text = "you are dead !"
label_settings = SubResource("LabelSettings_ta8xq")
horizontal_alignment = 1

[node name="respawn" type="Label" parent="Death Screen"]
offset_top = 152.0
offset_right = 400.0
offset_bottom = 187.0
text = "respawn in 3"
label_settings = SubResource("LabelSettings_bk67w")
horizontal_alignment = 1

[node name="StatusDisplay" type="Node2D" parent="."]
position = Vector2(395, 47)

[connection signal="pressed" from="Menu/craftingViSToggle" to="." method="_on_crafting_vi_s_toggle_pressed"]
